<resources>
    <string name="app_name" translatable="false">Shadowroller</string>
    <string name="action_settings">Settings</string>
    <string name="content_authority" translatable="false">com.imber.shadowroller.provider</string>
    <string name="file_name_initialize_prob_tables_shared_pref">shadowroller_initialize_prob</string>
    <string name="file_name_sign_in_bar_shared_pref">shadowroller_sign_in_bar</string>

    <string name="name_test_simple">Simple Test</string>
    <string name="name_test_extended">Extended Test</string>
    <string name="name_probability">Probability</string>
    <string name="name_saved_rolls">Saved Rolls</string>

    <string name="simple">Simple</string>
    <string name="extended">Extended</string>
    <string name="edge">Edge</string>
    <string name="modifier_rule_of_six">Rule of Six</string>
    <string name="modifier_push_the_limit">Push the Limit</string>
    <string name="title_common_roll_add">Add Roll</string>
    <string name="title_common_roll_add_edit">Edit Roll</string>
    <string name="hint_common_roll_add_name">Test Name</string>
    <string name="hint_common_roll_add_dice">Dice</string>
    <string name="re_roll">Re-roll</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="untitled">Untitled</string>
    <string name="probability_hits_label">Hits</string>
    <string name="probability_probability_label">Probability</string>
    <string name="glitch">Glitch</string>
    <string name="critical_glitch">Critical Glitch</string>
    <string name="history">History</string>
    <string name="clear">Clear</string>
    <string name="clear_history">Clear History</string>
    <string name="cumulative">Cumulative</string>
    <string name="not_now">Not Now</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="history_star_content_description_visible">Saved roll</string>
    <string name="history_star_content_description_invisible">Not saved roll</string>

    <string name="saved_roll_heading">Saved Roll</string>
    <string name="test_type_heading">Test Type</string>
    <string name="dice_heading">Dice</string>
    <string name="edge_heading">Edge Used</string>
    <string name="hits_heading">Hits</string>

    <string name="sign_in_purpose_text">Sign in to enable sync across devices.</string>
    <string name="sign_out_purpose_text">Sign out to disable sync across devices.</string>
    <string name="error_sign_in">Error signing in. Try again in Settings.</string>
    <string name="error_common_rolls_sync">Error syncing common rolls.</string>
    <string name="signed_in_key" translatable="false">signed_in</string>

    <string name="list_item_history_default_name" translatable="false">-</string>

    <string name="text_minus_button" translatable="false">–</string>
    <string name="text_plus_button" translatable="false">+</string>

    <string name="fab_scroll_behavior" translatable="false">com.imber.shadowroller.ui.ScrollAwareFABBehavior</string>

    <string name="file_name_probability_normal" translatable="false">probability_normal.data</string>
    <string name="file_name_probability_rule_of_six" translatable="false">probability_rule_of_six.data</string>
    <string name="file_name_probability_push_the_limit" translatable="false">probability_push_the_limit.data</string>
    <string name="file_name_probability_normal_cumulative" translatable="false">probability_normal_cumulative.data</string>
    <string name="file_name_probability_rule_of_six_cumulative" translatable="false">probability_rule_of_six_cumulative.data</string>
    <string name="file_name_probability_push_the_limit_cumulative" translatable="false">probability_push_the_limit_cumulative.data</string>

    <string name="pref_accuracy">Probability Accuracy</string>
    <string name="pref_accuracy_key" translatable="false">accuracy</string>
</resources>
