<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/gray"
        android:elevation="4dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/saved_roll_heading"
            android:padding="4dp"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/test_type_heading"
            android:padding="4dp"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/edge_heading"
            android:padding="4dp"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dice_heading"
            android:padding="4dp"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="@dimen/common_roll_list_item_circle_size"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hits_heading"
            android:padding="4dp"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance"
            android:textStyle="bold"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/history_recycler_view"/>
</LinearLayout>
