<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:baselineAligned="false"
    android:columnCount="5"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_rowSpan="2"
        android:layout_columnWeight="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list_item_history_star"
            android:src="@drawable/ic_star"
            android:layout_gravity="center_horizontal|top"/>
    </FrameLayout>
    <TextView
        android:text="@string/test_type_heading"
        android:padding="4dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Subtitle"
        android:layout_columnWeight="1"/>
    <TextView
        android:text="@string/dice_heading"
        android:padding="4dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Subtitle"
        android:layout_columnWeight="1"/>
    <TextView
        android:text="@string/edge_heading"
        android:padding="4dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Subtitle"
        android:layout_columnWeight="1"/>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="4">
        <TextView
            android:layout_width="@dimen/common_roll_list_item_circle_size"
            android:layout_height="@dimen/common_roll_list_item_circle_size"
            android:id="@+id/list_item_history_hits"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/roll_result_circle"
            android:layout_gravity="center"
            tools:text="4"/>
    </FrameLayout>

    <TextView
        android:id="@+id/list_item_history_test_type"
        android:padding="4dp"
        android:gravity="center"
        android:layout_columnWeight="1"
        tools:text="Simple"/>
    <TextView
        android:id="@+id/list_item_history_dice"
        android:padding="4dp"
        android:gravity="center"
        android:layout_columnWeight="1"
        tools:text="10"/>
    <TextView
        android:id="@+id/list_item_history_edge"
        android:padding="4dp"
        android:gravity="center"
        android:layout_columnWeight="1"
        tools:text="@string/modifier_rule_of_six"/>
    <TextView
        android:id="@+id/list_item_history_status"
        android:padding="4dp"
        android:gravity="center"
        android:layout_columnWeight="1"
        tools:textColor="@color/glitch"
        tools:text="@string/glitch"/>

</GridLayout>