<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_bar"
        android:orientation="horizontal"
        android:padding="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/sign_in_purpose_text"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/common_rolls_not_now"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/not_now"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/common_rolls_sign_in"
            android:textColor="@android:color/white"
            android:theme="@style/SignInButton"
            android:text="@string/sign_in" />
    </LinearLayout>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sign_in_bar">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/common_rolls_recycler_view"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab_common_rolls_add"
            android:layout_margin="16dp"
            android:src="@drawable/ic_plus"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_anchor="@id/common_rolls_recycler_view"
            app:layout_behavior="@string/fab_scroll_behavior"/>

    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>
