<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dice_roll_card"
        android:background="@android:color/white"
        android:elevation="@dimen/dice_roller_view_elevation"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:layout_width="@dimen/dice_roller_view_big_red_button_size"
            android:layout_height="@dimen/dice_roller_view_big_red_button_size"
            android:id="@+id/big_red_button"
            android:background="@drawable/roll_circle"
            android:elevation="9dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="@dimen/dice_roller_view_plus_minus_button_size"
                    android:layout_height="@dimen/dice_roller_view_plus_minus_button_size"
                    android:id="@+id/minus_button"
                    android:background="@drawable/plus_minus_circle"
                    android:layout_gravity="center"
                    android:text="@string/text_minus_button"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="@dimen/dice_roller_view_plus_minus_button_size"
                    android:layout_height="@dimen/dice_roller_view_plus_minus_button_size"
                    android:id="@+id/plus_button"
                    android:background="@drawable/plus_minus_circle"
                    android:layout_gravity="center"
                    android:text="@string/text_plus_button"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edge_check_box"
                    android:text="@string/edge"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cumulative_check_box"
                    android:text="@string/cumulative"
                    android:checked="true"/>
            </LinearLayout>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_group_roll_modifiers"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="8dp">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_button_modifiers_rule_of_six"
                    android:checked="true"
                    android:text="@string/modifier_rule_of_six"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_button_modifiers_push_the_limit"
                    android:text="@string/modifier_push_the_limit"/>
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>
</merge>