<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dice_roller_view_card_height"
        android:id="@+id/dice_roll_card"
        android:background="@android:color/white"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">
            <TextView
                android:layout_width="@dimen/dice_roller_view_plus_minus_button_size"
                android:layout_height="@dimen/dice_roller_view_plus_minus_button_size"
                android:id="@+id/minus_button"
                android:background="@drawable/plus_minus_circle"
                android:layout_gravity="center"
                android:text="@string/text_minus_button"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </FrameLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edge_check_box"
            android:text="@string/edge"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dice_roller_view_modifier_controls_margin_top"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group_roll_modifiers"
            android:elevation="8dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dice_roller_view_modifier_controls_margin_top">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_modifiers_rule_of_six"
                android:checked="true"
                android:text="@string/modifier_rule_of_six"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_modifiers_push_the_limit"
                android:text="@string/modifier_push_the_limit"/>
        </RadioGroup>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">
            <TextView
                android:layout_width="@dimen/dice_roller_view_plus_minus_button_size"
                android:layout_height="@dimen/dice_roller_view_plus_minus_button_size"
                android:id="@+id/plus_button"
                android:background="@drawable/plus_minus_circle"
                android:layout_gravity="center"
                android:text="@string/text_plus_button"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </FrameLayout>
    </LinearLayout>
    <TextView
        android:layout_width="@dimen/dice_roller_view_roll_button_size"
        android:layout_height="@dimen/dice_roller_view_roll_button_size"
        android:id="@+id/big_red_button"
        android:layout_marginTop="0dp"
        android:background="@drawable/roll_circle"
        android:elevation="9dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"/>
</merge>