<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/dialog_common_rolls_add_min_width"
    android:minHeight="@dimen/dialog_common_rolls_add_min_height"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/dialog_common_rolls_add_edit_text_name_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8dp">
        <android.support.design.widget.TextInputEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/edit_text_common_rolls_add_name"
            android:hint="@string/hint_common_roll_add_name"
            android:inputType="text"
            android:imeOptions="actionDone" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:padding="8dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="@dimen/dice_roller_view_plus_minus_button_size"
                android:layout_height="@dimen/dice_roller_view_plus_minus_button_size"
                android:id="@+id/minus_button"
                android:background="@drawable/plus_minus_circle"
                android:layout_gravity="center"
                android:text="@string/text_minus_button"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </FrameLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_common_rolls_add_dice"
                android:hint="@string/hint_common_roll_add_dice"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:maxLength="3"
                android:gravity="center_horizontal"/>
        </android.support.design.widget.TextInputLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="@dimen/dice_roller_view_plus_minus_button_size"
                android:layout_height="@dimen/dice_roller_view_plus_minus_button_size"
                android:id="@+id/plus_button"
                android:background="@drawable/plus_minus_circle"
                android:layout_gravity="center"
                android:text="@string/text_plus_button"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>